--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "alpaca-eval",
     "flash-attn==2.7.4.post1",
     "jupyter>=1.1.1",
-    "math-verify[antlr4-13-2]>=0.7.0",
+    "math-verify>=0.7.0",
     "pylatexenc==2.10",
     "notebook>=7.4.2",
     "pytest>=8.3.5",
@@ -20,6 +20,10 @@ dependencies = [
     "vllm==0.7.2",
     "wandb>=0.19.8",
     "xopen>=2.0.2",
+        "omegaconf>=2.3.0,<2.4.0",
+    "einx>=0.3.0",
+    "jaxtyping>=0.3.2",
+    "hydra-core>=1.3.0",
 ]
 
 [tool.setuptools.packages.find]
